--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,14 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.colors {
+  background-color: rgb(37, 139, 139);
+}
+
+.cursor {
+  cursor: pointer;
+  position: absolute;
+  margin-top: -40px;
+  margin-left: 220px;
+}
