--- a/src/style.css
+++ b/src/style.css
@@ -18,3 +18,8 @@ p {
 .rounded-lg {
   border-radius: 15px !important;
 }
+/* 
+.margin-none {
+  padding: 0 !important;
+  margin: 0 !important;
+} */
