--- a/src/style.css
+++ b/src/style.css
@@ -47,3 +47,19 @@ p {
 }
 
 /* 38AEFA */
+
+.new-color {
+  background-color: #0071ff !important;
+}
+
+.full-height {
+  height: 100vh;
+}
+
+.height {
+  height: 200px;
+}
+
+.position {
+  margin-top: -50px;
+}
