--- a/src/style.css
+++ b/src/style.css
@@ -49,13 +49,13 @@ p {
 .btn-pink {
   color: #fff;
   background-color: #0071ff;
-  border-color: #0071ff ;
+  border-color: #0071ff;
 }
 
 .btn-pink:hover {
   color: #fff;
-  background-color: #0071ff ;
-  border-color: #0071ff ;
+  background-color: #0071ff;
+  border-color: #0071ff;
 }
 
 /* 38AEFA */
@@ -147,7 +147,7 @@ p {
 }
 
 .bg-pays {
-  background-color: #f6f5fe;
+  background-color: #f6f5fe !important;
   /* width: 100vw !important; */
 }
 
@@ -169,4 +169,9 @@ p {
 
 .check-color {
   background-color: transparent;
+}
+
+.radios {
+  width: 10px;
+  height: 10px;
 }
