--- a/src/style.css
+++ b/src/style.css
@@ -207,6 +207,10 @@ p {
   box-shadow: 0 0 25px 5px #0069e931;
 }
 
+.colorss {
+  background-color: #0048cf96;
+}
+
 @media (max-width: 500px) {
   .bord {
     display: none;
