--- a/src/assets/Styles/search.css
+++ b/src/assets/Styles/search.css
@@ -20,3 +20,13 @@ input::placeholder {
   margin-left: 700px;
   margin-top: -30px;
 }
+
+@media (max-width: 500px) {
+  .searches {
+    position: relative;
+    width: 380px;
+    height: 42px;
+    margin-left: 10px;
+    margin-top: 0px;
+  }
+}
