--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ p {
 .btn-color {
   color: #fff !important;
   background-color: #0071ff !important;
-  border-color: #0071ff Im !important;
+  border-color: #0071ff !important;
 }
 
 .btn-pink {
