still working on the donor dashboard

--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,7 @@ p {
 }
 
 .borders {
-  border: 1px solid #0071ff;
+  border: 1px solid #0073ff69;
   cursor: pointer;
   border-radius: 13px;
   height: 150px !important;
