--- a/src/style.css
+++ b/src/style.css
@@ -6,23 +6,27 @@ p {
     'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+* {
+  color: #858585;
+}
+
 .colors {
-  background-color: #008971;
+  background-color: #008971 !important;
 }
 
 .cursor {
-  cursor: pointer;
-  position: absolute;
-  margin-top: -40px;
-  margin-left: 220px;
+  cursor: pointer !important;
+  position: absolute !important;
+  margin-top: -40px !important;
+  margin-left: 220px !important;
 }
 
 .cursor-pointer {
-  cursor: pointer;
+  cursor: pointer !important;
 }
 
 .text-disabled {
-  color: rgb(82, 82, 82);
+  color: rgb(82, 82, 82) !important;
 }
 
 .rounded-lg {
@@ -59,25 +63,25 @@ p {
 }
 
 .text-blue {
-  color: #0071ff;
+  color: #0071ff !important;
 }
 
 .full-height {
-  height: 100vh;
+  height: 100vh !important;
 }
 
 .height {
-  height: 200px;
+  height: 200px Im !important;
 }
 
 .position {
-  margin-top: -50px;
+  margin-top: -50px !important;
 }
 
 .borders {
-  border: 1px solid #0073ff69;
-  cursor: pointer;
-  border-radius: 13px;
+  border: 1px solid #0073ff69 !important;
+  cursor: pointer !important;
+  border-radius: 13px !important;
   height: 150px !important;
   width: 100px !important;
 }
@@ -88,39 +92,39 @@ p {
 
 .month select,
 .year select {
-  width: 145px;
-  padding: 10px;
+  width: 145px !important;
+  padding: 10px !important;
   /* border: 2px solid rgb(214, 214, 214); */
-  border-radius: 6px;
+  border-radius: 6px !important;
   /* background: url('caret.png') no-repeat; */
-  background-position: 85% 50%;
-  -moz-appearance: none;
-  -webkit-appearance: none;
+  background-position: 85% 50% !important;
+  -moz-appearance: none !important;
+  -webkit-appearance: none !important;
 }
 
 .months {
-  background-color: #ebebeb;
-  color: #707070;
+  background-color: #ebebeb !important;
+  color: #707070 !important;
 }
 
 .fonts {
-  font-weight: 300;
-  font-size: 12px;
+  font-weight: 300 !important;
+  font-size: 12px !important;
 }
 
 .bg-pay {
-  margin-top: -50px;
-  background-color: #f6f5fe;
-  width: 100vw;
-  height: 107vh;
+  margin-top: -50px !important;
+  background-color: #f6f5fe !important;
+  width: 100vw !important;
+  height: 107vh !important;
 }
 
 .w-60 {
-  width: 53%;
+  width: 53% !important;
 }
 
 .checks::placeholder {
-  color: #b6b6b6;
+  color: #b6b6b6 !important;
   /* text-align: center; */
 }
 
@@ -133,7 +137,7 @@ p {
 }
 
 .checks {
-  border: 0;
+  border: 0 !important;
 }
 
 .widths {
@@ -143,7 +147,7 @@ p {
 }
 
 .bg-pays {
-  background-color: #f6f5fe;
+  background-color: #f6f5fe !important;
   /* width: 100vw !important; */
 }
 
@@ -155,7 +159,7 @@ p {
   width: 50% !important;
 }
 .center {
-  margin-left: 65px;
+  margin-left: 65px !important;
 }
 
 .check-weight {
@@ -164,47 +168,47 @@ p {
 }
 
 .check-color {
-  background-color: transparent;
+  background-color: transparent !important;
 }
 
 .radios {
-  width: 10px;
-  height: 10px;
+  width: 10px !important;
+  height: 10px !important;
 }
 
 .rounds-start {
   border-top-left-radius: 7px !important;
   border-bottom-left-radius: 7px !important;
-  border-color: transparent;
+  border-color: transparent !important;
 }
 
 .rounds-end {
   border-top-right-radius: 7px !important;
   border-bottom-right-radius: 7px !important;
-  border-color: transparent;
+  border-color: transparent !important;
 }
 
 .bgs {
-  background-color: #f0f0f0;
+  background-color: #f0f0f0 !important;
 }
 
 .bg-pa {
   background: linear-gradient(to bottom, rgba(28, 52, 82, 0.7), rgba(28, 52, 82, 0.7)),
-    url('./assets/unnamed.jpg');
+    url('./assets/unnamed.jpg') !important;
   /* width: fit-content; */
-  background-repeat: repeat-x;
-  background-position-y: center;
-  background-size: contain;
+  background-repeat: repeat-x !important;
+  background-position-y: center !important;
+  background-size: contain !important;
   /* background-clip: ; */
   /* background-color: #1c3452; */
 }
 
 .shadow-blue {
-  box-shadow: 0 0 25px 5px #0069e931;
+  box-shadow: 0 0 25px 5px #0069e931 !important;
 }
 
 .colorss {
-  background-color: #0048cf96;
+  background-color: #0048cf96 !important;
 }
 
 /* .h-autos {
@@ -213,40 +217,40 @@ p {
 
 .glassmorphism {
   /* other styles */
-  background: rgba(255, 255, 255, 0.7);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.7) !important;
+  -webkit-backdrop-filter: blur(10px) !important;
+  backdrop-filter: blur(10px) !important;
 }
 
 .widthss {
-  width: 800px;
+  width: 800px !important;
 }
 
 .margins {
-  margin-top: -50px;
+  margin-top: -50px !important;
 }
 
 .bg-images {
   /* background: linear-gradient(rgba(28, 52, 82, 0.3), rgba(28, 52, 82, 0.3)),
     url('./assets/animals.jpg'); */
-  background-image: url('./assets/edited_animals.jpg');
-  background-size: 215px;
-  background-repeat: no-repeat;
-  background-position-x: 223px;
+  background-image: url('./assets/edited_animals.jpg') !important;
+  background-size: 215px !important;
+  background-repeat: no-repeat !important;
+  background-position-x: 223px !important;
 }
 
 .moves {
-  position: absolute;
+  position: absolute !important;
   margin-top: -40px !important;
-  margin-left: 110px;
+  margin-left: 110px !important;
 }
 
 .amounts {
-  position: absolute;
+  position: absolute !important;
   margin-top: -46px !important;
-  margin-left: 420px;
-  color: #000000;
-  background-color: #f5f5f5;
+  margin-left: 420px !important;
+  color: #000000 !important;
+  background-color: #f5f5f5 !important;
 }
 
 .shift {
@@ -255,31 +259,31 @@ p {
 }
 
 .recieved {
-  position: absolute;
+  position: absolute !important;
   margin-top: -40px !important;
-  margin-left: 230px;
+  margin-left: 230px !important;
 }
 
 .profile {
-  margin-left: 970px;
+  margin-left: 970px !important;
 }
 
 .bg-image {
   background-image: url('./assets/success1.gif') !important;
-  background-repeat: no-repeat;
-  background-size: auto;
+  background-repeat: no-repeat !important;
+  background-size: auto !important;
 }
 
 @media (max-width: 500px) {
   .bord {
-    display: none;
+    display: none !important;
   }
   .amounts {
-    position: absolute;
+    position: absolute !important;
     margin-top: 10px !important;
-    margin-left: 200px;
+    margin-left: 200px !important;
   }
   .profile {
-    margin-left: 100px;
+    margin-left: 100px !important;
   }
 }
