to start responsiveness

--- a/src/style.css
+++ b/src/style.css
@@ -40,8 +40,8 @@ p {
 
 .btn-color {
   color: #fff !important;
-  background-color: #0071ff !important;
-  border-color: #0071ff !important;
+  background-color: #3a88fb !important;
+  border-color: #3a88fb !important;
 }
 
 .btn-pink {
@@ -223,7 +223,7 @@ p {
 }
 
 .widthss {
-  width: 800px !important;
+  width: 700px !important;
 }
 
 .margins {
