--- a/src/assets/Styles/search.css
+++ b/src/assets/Styles/search.css
@@ -1,9 +1,19 @@
+
+/* <style> */
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+/* </style> */
 .input {
-  background-image: url('../search.png');
-  background-repeat: no-repeat;
+  /* background-image: url('../search.png'); */
+  /* background-repeat: no-repeat; */
   /* background-size: contain; */
-  background-size: 23px;
-  background-position: 230px;
+  /* background-size: 18px;
+  background-position: 230px; */
   text-indent: 10px;
 }
 
@@ -17,7 +27,7 @@ input::placeholder {
   position: absolute;
   width: 380px;
   height: 42px;
-  margin-left: 700px;
+  margin-left: 800px;
   margin-top: -30px;
 }
 
