--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-@import url('./assets/Styles/responsive-500.css');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aref+Ruqaa+Ink:wght@400;700&display=swap');
 
@@ -387,7 +386,7 @@ p {
   margin-left: 180px;
 }
 
-/* @media (max-width: 500px) {
+@media (max-width: 500px) {
   .bord {
     display: none !important;
   }
@@ -460,4 +459,4 @@ p {
 .payout-text {
   margin-left: 50px;
 }
-} */
+}
