--- a/src/style.css
+++ b/src/style.css
@@ -386,6 +386,16 @@ p {
   margin-left: 180px;
 }
 
+.bg-ranger {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('./assets/ranger.jpg') !important;
+  /* background-size: cover; */
+  background-repeat: no-repeat;
+}
+
+.hh-100 {
+  height: 100vh;
+}
+
 @media (max-width: 500px) {
   .bord {
     display: none !important;
@@ -458,5 +468,9 @@ p {
 
 .payout-text {
   margin-left: 50px;
+}
+
+.hh-100 {
+  height: max-content;
 }
 }
