--- a/src/style.css
+++ b/src/style.css
@@ -396,6 +396,13 @@ p {
   height: 100vh;
 }
 
+.bg-maps {
+  background-image: url('./assets/map\ of\ the\ world.png');
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 @media (max-width: 500px) {
   .bord {
     display: none !important;
